<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="obj"
            type="com.mcma.models.contacts.ContactEntityModel" />

        <variable
            name="presenter"
            type="com.mcma.modules.contacts.presenter.ContactPresenterImpl" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:id="@+id/content_new_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:background="@android:color/white"
            android:clickable="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/profile_dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="?attr/selectableItemBackground"
                        app:srcCompat="@drawable/default_dp_big" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textinputlayout_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorText="@{obj.firstValidation}">

                        <EditText
                            android:id="@+id/editText_fName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:ems="10"
                            android:hint="@string/first_name"
                            android:inputType="textPersonName"
                            android:text="@={obj.first_name}" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textinputlayout_lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editText_lName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/button"
                            android:layout_below="@+id/editText"
                            android:ems="10"
                            android:hint="@string/last_name"
                            android:inputType="textPersonName"
                            android:text="@={obj.last_name}" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textinputlayout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorText="@{obj.phoneValidation}">

                        <EditText
                            android:id="@+id/editText_phoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/editText2"
                            android:layout_below="@+id/editText2"
                            android:ems="10"
                            android:hint="@string/mobile_number"
                            android:inputType="phone"
                            android:text="@={obj.phone_number}" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textinputlayout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorText="@{obj.emailValidation}">

                        <EditText
                            android:id="@+id/editText_Email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/editText3"
                            android:layout_below="@+id/editText3"
                            android:ems="10"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:text="@={obj.email}" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/content"
                    android:onClick="@{() -> presenter.onContactSaveClicked(obj)}"
                    android:text="@string/save" />
            </RelativeLayout>
        </FrameLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>